# RedMarketX

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
account/: urls.py
account/models/: user.py
account/serializers/: auth.py  register.py
account/views/: __init__.py  auth.py  settings.py
api/: manage.py
api/account/migrations/: 0001_initial.py
api/account/models/: user_manager.py
api/account/serializers/: __init__.py  settings.py
api/account/views/: register.py  settings.py
api/config/: item_enchantments.json  item_types.json
api/item/migrations/: 0001_initial.py
api/item/models/: __init__.py  category.py  material.py
api/order/: urls.py
api/order/migrations/: 0001_initial.py
api/order/models/: __init__.py  order.py  order_enchantment.py
api/order/serializers/: __init__.py  order_create.py  order_detail.py
api/order/views/: __init__.py  order_create.py  order_detail.py  order_metadata.py
api/redmarket/: settings.py  urls.py
api/scripts/: insert_categories_fromconfig.py  insert_enchantments_fromconfig.py  insert_itemtypes_fromconfig.py  insert_materials_fromconfig.py
api/tests/: conftest.py
config/: item_categories.json  item_enchantments.json  item_materials.json  item_types.json
item/models/: enchantment.py  item_type.py
redmarket/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: insert_categories_fromconfig.py  insert_enchantments_fromconfig.py  insert_itemtypes_fromconfig.py  insert_materials_fromconfig.py
tests/: conftest.py
tests/account/: test_change_password.py  test_login.py  test_register.py
(+1 files in other folders)
